--- a/estilos.css
+++ b/estilos.css
@@ -3,7 +3,9 @@
     padding: 0;
 }
 
-
+body {
+    font-family: monospace !important;
+}
 
 #imagen {
     max-width: 1300px;
@@ -12,29 +14,44 @@
 
 .pantalla1{
     display: flex;
-    flex-flow: column;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: -600px;
-
+    flex-flow: row;
+    justify-content: center;
+    margin-top: -950px;
+    height: 900px;
+    position: relative;
 }
+
+
 
 button {
     width: 50%;
-    height: 50px;
+    padding: 5px;
+    border: 7px double rgb(145, 238, 153);
+    border-radius: 100px !important;
+    box-shadow: 5px 5px black;
+    opacity: 60%;
+    font-weight: bold;
 }
 
 .parrafo {
+    position: absolute;
     font-size: 30px;
-    background-color: wheat;
+    background-color: rgb(248, 233, 232);
     width: 50%;
-    margin-bottom: 200px;
+    border-radius: 50px;
+    padding: 30px;
+    border: 7px double rgb(93, 72, 255);
+
+    opacity: 60%;
 }
 
 .divbtn{
+    position: absolute;
+    align-self: flex-end;
     font-size: 20px;
     background-color: transparent;
-    width: 80%;
+    width: 90%;
+    height: auto;
     display: flex;
     justify-content: space-around;
 }
