--- a/estilos.css
+++ b/estilos.css
@@ -16,7 +16,10 @@ body {
 }
 
 
+
+
 .pantalla1{
+    width: 100%;
     display: flex;
     flex-flow: row;
     justify-content: center;
@@ -25,10 +28,14 @@ body {
     position: relative;
 }
 
+p {
+    display: flex;
+    justify-content: center;
+}
+
 
 
 button {
-    width: 50%;
     padding: 5px;
     border: 7px double rgb(145, 238, 153);
     border-radius: 100px !important;
@@ -37,26 +44,55 @@ button {
     font-weight: bold;
 }
 
+#input{
+    margin-top: 200px;
+    display: flex;
+    justify-content: center;
+    height: 40px;
+    width: 200px;
+}
+
+
 .parrafo {
     position: absolute;
-    font-size: 30px;
+    font-size: 20px;
     background-color: rgb(248, 233, 232);
-    width: 50%;
+    width: 280px;
     border-radius: 50px;
-    padding: 30px;
+    padding: 10px;
     border: 7px double rgb(93, 72, 255);
-
     opacity: 60%;
+
 }
+
+
 
 .divbtn{
     position: absolute;
     align-self: flex-end;
-    font-size: 20px;
+    font-size: 15px;
     background-color: transparent;
     width: 90%;
     height: auto;
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    
+    
 }
 
+@media screen and (min-width: 768px) {
+    .parrafo {
+        width: 50%;
+        font-size: 30px;
+    }
+    .divbtn{
+        font-size: 20px;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+    button {
+        width: 50%;
+    }
+    
+}
