--- a/estilos.css
+++ b/estilos.css
@@ -8,12 +8,10 @@ body {
 }
 
 #imagen {
-    height: 1000px;
+    height: 823px;
 }
 
-#larreta {
-    width: 60%;
-}
+
 
 
 
@@ -22,10 +20,11 @@ body {
     width: 100%;
     display: flex;
     flex-flow: row;
+    align-items: flex-start;
     justify-content: center;
-    margin-top: -950px;
-    height: 900px;
-    position: relative;
+    margin-top: -51rem;
+    height: 823px;
+    
 }
 
 p {
@@ -36,6 +35,7 @@ p {
 
 
 button {
+    width: 98%;
     padding: 5px;
     border: 7px double rgb(145, 238, 153);
     border-radius: 100px !important;
@@ -62,6 +62,7 @@ button {
     padding: 10px;
     border: 7px double rgb(93, 72, 255);
     opacity: 60%;
+    
 
 }
 
@@ -69,22 +70,21 @@ button {
 
 .divbtn{
     position: absolute;
-    align-self: flex-end;
+    bottom: 0;
     font-size: 15px;
     background-color: transparent;
     width: 90%;
     height: auto;
     display: flex;
     flex-direction: column;
-    
-    
 }
 
 @media screen and (min-width: 768px) {
     .parrafo {
-        width: 50%;
+        width: 30%;
         font-size: 30px;
     }
+
     .divbtn{
         font-size: 20px;
         flex-direction: row;
@@ -93,6 +93,17 @@ button {
     }
     button {
         width: 50%;
+    }
+    #imagen {
+        height: 900px;
+    }
+    .divbtn{
+        position: relative;
+        margin-top: 40rem;
+    }
+    #input{
+        position: absolute;
+        margin-top: 20rem;
     }
     
 }
